doc: change color pallete, fix button alignment, and change result style.

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 #calculator {
   background-color: #fed9b7;
   width:450px;
-  height:600px;
+  height:580px;
   display:flex;
   flex-direction: column;
   align-items: center;
@@ -9,29 +9,27 @@
 #screen {
   background-color: #fdfcdc;
   width:90%;
-  height: 15%;
+  height: 20%;
   margin: 20px;
+  display:flex;
+  align-items: center;
 }
 #key-div {
   background-color: #f07167;
   width:90%;
-  height:74%;
+  height:360px;
   display:flex;
-  flex-wrap:wrap;
   gap:20px;
   justify-content: center;
-  align-items: center;
-  flex-direction: row;
+  flex-wrap:wrap;
+  padding: 20px 0px;
 }
 .btn {
-  background-color: #00afb9;
+  background-color: #D2E0FB;
   width: 75px;
-  height:75px;
-  font-size: 24px;
-  margin:0px;
+  height: 75px;
+  font-size: 30px;
   padding:0px;
-
-  margin: 0px 0px;
   border:none;
 }
 #enter {
@@ -39,5 +37,10 @@
   color:white;
 }
 .operator {
-  background-color: #18F2B2;
+  background-color: #8EACCD;
+}
+
+#result {
+  margin:0px 10px;
+  font-size: 40px;
 }
